<resources>
    <string name="app_name">MyCalculator</string>

    <string name="numb1">2</string>
    <string name="numb2">3</string>
    <string name="calButt">Calculate</string>
    <string name="txtPlus">+</string>
    <string name="txtMinus">-</string>
    <string name="txtMulti">*</string>
    <string name="txtDivid">/</string>
    <string name="switchOff">OFF</string>
    <string name="switchOn">ON</string>
</resources>
