<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

                <Button
                    android:id="@+id/calButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/num1"
                    android:text="@string/calButt" />

                <TextView
                    android:id="@+id/ans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/num2"
                    android:layout_toRightOf="@+id/num2"
                    android:textSize="30dp">

                </TextView>


                <EditText
                    android:id="@+id/num2"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/num1"
                    android:background="@drawable/ninepatch_lab"
                    android:inputType="number"
                    android:textAlignment="center" />
                <EditText
                    android:id="@+id/num1"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ninepatch_lab"
                    android:inputType="number"
                    android:textAlignment="center" />


                <RadioGroup
                    android:id="@+id/radGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/calButton"
                    android:checkedButton="@id/plus"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/txtPlus" />

                    <RadioButton
                        android:id="@+id/minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/txtMinus" />

                    <RadioButton
                        android:id="@+id/multipile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/txtMulti" />

                    <RadioButton
                        android:id="@+id/divide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/txtDivid" />

                </RadioGroup>

                <ProgressBar
                    android:id="@+id/progBar"
                    style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radGroup"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:indeterminate="true"
                    android:progress="50" />

                <Switch
                    android:id="@+id/switchOnOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/progBar"
                    android:text="@string/switchOff" />


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/rowOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/switchOnOff"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher"

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rowTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rowOne"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/selector_btn_default"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/rowThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rowTwo"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/btn_default_normal"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
